--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 </body>
 <div class="topnav">
   <input type="text" placeholder="Search..">
-  <li><a href="#">About</a></li>
-  <li><a href="#">Support</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="Support.html">Support</a></li>
 </div></header>
 
 <nav>
   <ul>
-    <li></a><a class="active" href="#home">For You</a></li>
-    <li><a href="#">Category</a></li>
+    <li></a><a class="active" href="index.html">For You</a></li>
+    <li><a href="Drawing.html">Drawing</a></li>
     <li><a href="#">Creators</a></li>
     <li><a href="#">Design</a></li>
     <li><a href="#">More</a></li>
