--- a/Drawing.html
+++ b/Drawing.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="css/style2.css">
-<body>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+   <link rel="stylesheet" href="css/drawing.css">
+   <style>
+   
+  </style>
+  </head>
+  
+  <body>
+    <div class="container">
+  </body>
   <div class="topnav">
     <input type="text" placeholder="Search..">
     <li><a href="about.html">About</a></li>
-    <li><a href="Support.html">Support</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
   </div></header>
-</head>
-<nav>
-  <ul>
-    <li></a><a class="active" href="index.html">For You</a></li>
-    <li><a href="Drawing.html">Drawing</a></li>
-    <li><a href="#">Creators</a></li>
-    <li><a href="#">Design</a></li>
-    <li><a href="#">More</a></li>
-  </ul>
+  
+  
+  <nav>
+    <ul>
+      <li></a><a class="active" href="Foryou.html">For You</a></li>
+      <li><a href="Drawing.html">Drawing</a></li>
+      <li><a href="Animation.html">Animation</a></li>
+      <li><a href="Design.html">Design</a></li>
+      <li><a href="More.html">More</a></li>
+    </ul>
   <aside>
     <div class="middle"><img src="images/Breakfast.jpg"alt="Breakfast"></div>
   </aside>
+  <aside>
+    <div class="middle"><img src="images/Party Skull.jpg"alt="Party Skeleton"></div>
+    <div class="right"><img src="images/Potpump.jpg"alt="Potpump"></div>
+  </aside>
   </nav>
-  
+  </html>
