--- a/about.html
+++ b/about.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/about.css">
 <body>
-  <div class="container">
+    <div class="container">
+</body>
   <div class="topnav">
     <input type="text" placeholder="Search..">
     <li><a href="about.html">About</a></li>
-    <li><a href="Support.html">Support</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
   </div></header>
-</head>
-<nav>
-  <ul>
-    <li></a><a class="active" href="index.html">For You</a></li>
-    <li><a href="#">Drawing</a></li>
-    <li><a href="#">Creators</a></li>
-    <li><a href="#">Design</a></li>
-    <li><a href="#">More</a></li>
-  </ul>
+  
+  <nav>
+    <ul>
+      <li></a><a class="active" href="Foryou.html">For You</a></li>
+      <li><a href="Drawing.html">Drawing</a></li>
+      <li><a href="Animation.html">Animation</a></li>
+      <li><a href="Design.html">Design</a></li>
+      <li><a href="More.html">More</a></li>
+    </ul>
 </nav>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
