--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
- <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/index.css">
  <style>
  
 </style>
@@ -19,16 +19,16 @@
 <div class="topnav">
   <input type="text" placeholder="Search..">
   <li><a href="about.html">About</a></li>
-  <li><a href="Support.html">Support</a></li>
+  <li><a href="Contact Us.html">Contact Us</a></li>
 </div></header>
 
 <nav>
   <ul>
-    <li></a><a class="active" href="index.html">For You</a></li>
+    <li></a><a class="active" href="Foryou.html">For You</a></li>
     <li><a href="Drawing.html">Drawing</a></li>
-    <li><a href="#">Creators</a></li>
-    <li><a href="#">Design</a></li>
-    <li><a href="#">More</a></li>
+    <li><a href="Animation.html">Animation</a></li>
+    <li><a href="Design.html">Design</a></li>
+    <li><a href="More.html">More</a></li>
   </ul>
 </nav>
 
