--- a/Drawing.html
+++ b/Drawing.html
@@ -15,19 +15,19 @@
   </body>
   <div class="topnav">
     <input type="text" placeholder="Search..">
+    <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
   </div></header>
   
-  
   <nav>
     <ul>
-      <li></a><a class="active" href="Foryou.html">For You</a></li>
       <li><a href="Drawing.html">Drawing</a></li>
       <li><a href="Animation.html">Animation</a></li>
       <li><a href="Design.html">Design</a></li>
       <li><a href="More.html">More</a></li>
     </ul>
+</nav>
   <aside>
     <div class="middle"><img src="images/Breakfast.jpg"alt="Breakfast"></div>
   </aside>
