--- a/Contact Us.html
+++ b/Contact Us.html
@@ -8,7 +8,7 @@
 </head>
   <div class="container">
     <div class="topnav">
-      <input type="text" placeholder="Search..">
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="Contact Us.html">Contact Us</a></li>
     </div></header>
