--- a/More.html
+++ b/More.html
@@ -15,6 +15,7 @@
   </body>
   <div class="topnav">
     <input type="text" placeholder="Search..">
+    <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
   </div></header>
